@@ -1,3 +1,7 @@
+2000-11-16  Mark Mitchell  <mark@codesourcery.com>
+
+	* config/c_io_stdio.h: Include libio.h.
+
 Wed Nov 15 18:39:34 2000  Mark P Mitchell  <mark@codesourcery.com>
 
 	* acinclude.m4 (GLIBCPP_ENABLE_CSTDIO): Substitute libio_la.
